--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ button {
 .circulo {
     position: absolute;
     width: 100%;
-    height: 100%;
+     height: 179%
     background: #017143;
     top: 0;
     left: 0;
